# cleaner_report

./: README.md  docker-compose.yml
nginx_conf/: default.conf
src/auth_service/: Dockerfile  Dockerfile.new  alembic.ini  config.py  init_app.py  main.py  pyproject.toml  requirements.txt
src/auth_service/alembic/: env.py
src/auth_service/alembic/versions/: 2025_06_05_0829-74fe5300151c_initial.py  b787a5ac32f4_first.py  c8ac1222618a_add_user_and_token_tables.py  e8bc9b0c9d42_create_new_user_model_and_jwt_model.py
src/auth_service/api/v1/: auth_router.py  schemas.py  utils.py
src/auth_service/api/v1/configs/: log_conf.py  redis_conf.py
src/auth_service/api/v1/services/: auth_service.py  create_user.py  jwt_service.py  user_service.py
src/auth_service/db/: models.py
src/auth_service/repositories/: jwt_repo.py  user.py  user_repo.py
src/gateway_service/: pyproject.toml  session.py
src/gateway_service/alembic/: env.py
src/gateway_service/api/v1/: schemas.py  tg_router.py  utils.py
src/llm_service/: Dockerfile  init_app.py  llm_router.py  pyproject.toml  requirements.txt
src/tg_bot/: api.py  main.py  requirements.txt  routers.py  utils.py
src/tg_bot/handlers/: get_me.py  login.py  photo.py  register.py
src/tg_bot/services/: redis_service.py
src/tg_service/: Dockerfile  config.py  init_app.py  pyproject.toml  requirements.txt  service.py  tg_router.py
src/tg_service/_celery/: celery_worker.py
src/tg_service/alembic/: env.py
src/tg_service/alembic/versions/: 6f47a18e312c_initial.py
src/tg_service/db/: engine.py  session.py
(+7 files in other folders)
