[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    { name = "Vladimir Malashkin", email = "faiver90@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "python-dotenv==1.0.1",
    "asyncpg (>=0.29.0,<1.0.0)",
    "alembic (>=1.13.1,<2.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
